--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -82,7 +82,7 @@ Their orchestrator is gated behind a paid cloud platform, and most features requ
 **Starlake doesn’t play that game.**
 
 We provide:
-- **A single declarative YAML layer** for ingest, transform, validate, and orchestrate
+- **A single declarative YAML layer** for extract, ingest, transform, validate, and orchestrate
 - **One config = Multiple warehouses** (BigQuery, Snowflake, Redshift…)
 - **Your orchestrator = Your choice**, fully integrated
 - **Auto-generated DAGs**, no manual workflow wiring
