--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -66,7 +66,7 @@ This comparison focuses on organizations with more than 15 users, where most of 
 | **Platform integration**            | Paid tier                                  | Free                                           |
 | **Data seeding**                    | For tiny CSV-only                          | Production grade support for various formats with schema validation      |
 | **On-Premise / BYO Cloud**          | Not available                              | Yes                                            |
-| **VSCode extension**                | Paid after 15 users                        | Always free                                    |
+| **VSCode extension**                | Paid tier                                  | Always free                                    |
 | **MCP Server**                      | Paid tier                                  | Yes (free)                                     |
 | **SQL Productivity tools**          | Paid product (DBT Canva)                   | Free and open-source (Starlake Copilot)        |
 | **SaaS Offering**                   | Yes                                        | Coming soon              |
