--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -43,7 +43,7 @@ This comparison focuses on organizations with more than 15 users, where most of 
 - Fast engine: Starlake uses a **Scala-based engine** for lightning-fast performance, while Dbt Fusion relies on a **Rust-based engine**.
 - Native SQL comprehension:  Both tools enable real-time error detection, SQL autocompletion and context-aware assistance without needing to hit the data warehouse. The difference ? With Dbt Fusion, it’s a paid feature. With Starlake, it’s free and open.
 - State-aware orchestration: Dbt Fusion's orchestration is limited to Dbt Saas Offering, while Starlake generates DAGs for **any orchestrator** with ready ones for Airflow, Dagster, and Snowflake Tasks.
-- Cost management: Dbt Fusion uses the SDF Engine for cost management, while Starlake leverages **OSS JSQLParser** and **JSQLTranspiler** for cost-effective SQL transformations.
+- Cost management: Dbt Fusion uses the SDF Engine for cost management, while Starlake leverages **OSS [JSQLParser](https://github.com/JSQLParser/JSqlParser)** and **[JSQLTranspiler](https://github.com/starlake-ai/jsqltranspiler)** for cost-effective SQL transformations.
 - Lineage & governance: Dbt Fusion offers lineage and governance features in their paid tier, while Starlake provides these capabilities for free and open.
 - Web-based visual editor: Dbt Fusion's visual editor is part of their paid tier, while Starlake offers a free web-based visual editor.
 - Platform integration: aka. Consistent experience across all interfaces, Dbt Fusion's platform integration is available in their paid tier, while Starlake provides free integration with various platforms.
