--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -45,7 +45,7 @@ This comparison focuses on organizations with more than 15 users, where most of 
 - State-aware orchestration: Dbt Fusion's orchestration is limited to Dbt Saas Offering, while Starlake generates DAGs for **any orchestrator** with ready ones for Airflow, Dagster, and Snowflake Tasks.
 - Cost management: Dbt Fusion uses the SDF Engine for cost management, while Starlake leverages **OSS [JSQLParser](https://github.com/JSQLParser/JSqlParser)** and **[JSQLTranspiler](https://github.com/starlake-ai/jsqltranspiler)** for cost-effective SQL transformations.
 - Lineage & governance: Dbt Fusion offers lineage and governance features in their paid tier, while Starlake provides these capabilities for free and open.
-- Web-based visual editor: Dbt Fusion's visual editor is part of their paid tier, while Starlake offers a free web-based visual editor.
+- Web-based visual editor: Dbt Fusion comes with aYAML editor only as part of their paid tier, while Starlake offers a in addition to a YAML editor, a free web-based visual editor.
 - Platform integration: aka. Consistent experience across all interfaces, Dbt Fusion's platform integration is available in their paid tier, while Starlake provides free integration with various platforms.
 - Data seeding: Dbt Fusion supports CSV-only data seeding, while Starlake offers **full support for various data formats (CSV, JSON, XML, Fixed Length ...)** with schema validation and user-defined materialization strategies.
 - On-Premise / BYO Cloud: Dbt Fusion does not offer an on-premise or BYO cloud option, while Starlake supports both allowing you to use the same tools and codebase across environments.
