--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -41,9 +41,9 @@ This comparison focuses on organizations with more than 15 users, where most of 
 :::
 
 - Fast engine: Starlake uses a **Scala-based engine** for lightning-fast performance, while Dbt Fusion relies on a **Rust-based engine**.
+- Database offloading: Dbt Fusion uses SDF and DataFusion, while Starlake leverages **[JSQLParser](https://github.com/JSQLParser/JSqlParser)** and DuckDB for cost-effective SQL transformations and database offloading.
 - Native SQL comprehension:  Both tools enable real-time error detection, SQL autocompletion and context-aware assistance without needing to hit the data warehouse. The difference ? With Dbt Fusion, it’s a paid feature. With Starlake, it’s free and open.
 - State-aware orchestration: Dbt Fusion's orchestration is limited to Dbt Saas Offering, while Starlake generates DAGs for **any orchestrator** with ready ones for Airflow, Dagster, and Snowflake Tasks.
-- Cost management: Dbt Fusion uses the SDF Engine for cost management, while Starlake leverages **OSS [JSQLParser](https://github.com/JSQLParser/JSqlParser)** and **[JSQLTranspiler](https://github.com/starlake-ai/jsqltranspiler)** for cost-effective SQL transformations.
 - Lineage & governance: Dbt Fusion offers lineage and governance features in their paid tier, while Starlake provides these capabilities for free and open.
 - Web-based visual editor: Dbt Fusion comes with aYAML editor only as part of their paid tier, while Starlake offers a in addition to a YAML editor, a free web-based visual editor.
 - Platform integration: aka. Consistent experience across all interfaces, Dbt Fusion's platform integration is available in their paid tier, while Starlake provides free integration with various platforms.
@@ -55,12 +55,11 @@ This comparison focuses on organizations with more than 15 users, where most of 
 - SQL Productivity tools: Dbt comes with DBT Canva, a paid product, at Starlake this is handled by Starlake Copilot through english prompts, which is free and open-source.
 
 
-| **Feature**                         | **Dbt Fusion**                             | **Starlake.ai**                                |
+| **Feature**                         | **Dbt Fusion **                             | **Starlake.ai**                                |
 |-------------------------------------|--------------------------------------------|------------------------------------------------|
 | **Fast engine**                     | Yes (Rust-based)                           | Yes (Scala-based)                              |
-| **Native SQL comprehension**        | Yes                                        | Yes                                            |
-| **State-aware orchestration**       | Limited to Dbt Saas offering               | Yes on any orchestrator                        |
-| **Cost management**                 | via SDF Engine                             | via OSS JSQLParser/ JSQLTranspiler             |
+| **State-aware orchestration**       | Limited to Dbt own orchestrator            | Yes on Airflow, Dagster, Snowflake Tasks, etc. |
+| **Native SQL comprehension**        | Based on SDF + DataFusion                  | Based on JSQLParser/JSQLTranspiler and DuckDB  |
 | **Lineage & governance**            | Paid tier                                  | Free                                           |
 | **Web-based visual editor**         | No                                         | Yes and always free                            |
 | **Platform integration**            | Paid tier                                  | Free                                           |
