Add video support

--- a/docs/0300-guides/050-project-setup/0110-connections.mdx
+++ b/docs/0300-guides/050-project-setup/0110-connections.mdx
@@ -14,7 +14,7 @@ The following types of connections are supported:
 - [Snowflake](#snowflake)
 - [Redshift](#amazon-redshift)
 - [DuckdDB / Ducklake](#duckdb)
-- [Any Database](#any-database)
+- [Other Database](#any-database)
 
 
 ## Local File System
