--- a/docs/0300-guides/050-project-setup/050-bootstrap.mdx
+++ b/docs/0300-guides/050-project-setup/050-bootstrap.mdx
@@ -3,16 +3,15 @@ id: starlake-project-setup
 title: Create Your First Starlake Project
 description: Learn how to bootstrap a new Starlake project and configure your data warehouse connection for pipelines
 keywords: [starlake, data engineering, etl, bootstrap, project setup, data warehouse, bigquery, duckdb]
-sidebar_label: Create Project
+sidebar_label: Start new project
 sidebar_position: 1
 ---
 
-# Create a project
+# New Project Setup
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-## Select a project template
 
 To create a new project, first create an empty folder and run the starlake bootstrap CLI command:
 
