--- a/docs/0200-setup/200-starlake-core.mdx
+++ b/docs/0200-setup/200-starlake-core.mdx
@@ -28,7 +28,7 @@ import TabItem from '@theme/TabItem';
 One-line installation script:
 
 ```bash
-sh <(curl https://raw.githubusercontent.com/starlake-ai/starlake/master/distrib/setup.sh)
+bash <(curl https://raw.githubusercontent.com/starlake-ai/starlake/master/distrib/setup.sh)
 ```
 
 The script will create the following directory structure:
