--- a/docs/0300-guides/050-project-setup/0110-connections.mdx
+++ b/docs/0300-guides/050-project-setup/0110-connections.mdx
@@ -285,7 +285,7 @@ application:
 
 
 
-## DuckDB
+## DuckDB / DuckLake
 DuckDB is a lightweight, in-process SQL OLAP database management system. It is designed to support analytical queries on large datasets.
 
 ```yaml
