Add guides section

--- a/docs/0300-guides/050-project-setup/0110-connections.mdx
+++ b/docs/0300-guides/050-project-setup/0110-connections.mdx
@@ -13,7 +13,7 @@ The following types of connections are supported:
 - [Spark / Databricks](#apache-spark--databricks)
 - [Snowflake](#snowflake)
 - [Redshift](#amazon-redshift)
-- [DuckdDB / Ducklake](#duckdb-ducklake)
+- [DuckdDB / Ducklake](#duckdb--ducklake)
 - [Other Database](#any-database)
 
 
