--- a/blog/2025-08-26-starlake-snowflake-native-app.mdx
+++ b/blog/2025-08-26-starlake-snowflake-native-app.mdx
@@ -1,3 +1,16 @@
+---
+title: Starlake Data Pipelines as a Snowflake Native App
+slug: starlake-data-pipelines-snowflake
+authors:
+  - hayssams
+tags:
+  - ai
+  - snowflake
+  - data-pipelines
+  - data-engineering
+  - analytics-engineering
+---
+
 ## **Starlake Snowflake Native App**
 
 We're excited to announce that **Starlake** will soon be available as a **Snowflake Native App**, bringing our declarative, AI-powered data pipeline automation **natively inside your Snowflake environment**.
