--- a/blog/2025-08-26-starlake-snowflake-native-app.mdx
+++ b/blog/2025-08-26-starlake-snowflake-native-app.mdx
@@ -45,20 +45,15 @@ In short: **No data movement. No orchestration glue code. Just powerful, declara
 
 With the Starlake Snowflake Native App, you'll be able to:
 
-**Define pipelines declaratively \
-**Use YAML or our visual UI to specify ingestion, transformations, validations, and orchestration.
+**Define pipelines declaratively** Use YAML or our visual UI to specify ingestion, transformations, validations, and orchestration.
 
- **Run natively inside Snowflake \
-**All execution happens in your Snowflake environment, no external runtimes or data movement.
+**Run natively inside Snowflake** All execution happens in your Snowflake environment, no external runtimes or data movement.
 
-**Automate orchestration \
-**Starlake auto-generates Snowflake Tasks and DAGs, with full dependency tracking and scheduling.
+**Automate orchestration** Starlake auto-generates Snowflake Tasks and DAGs, with full dependency tracking and scheduling.
 
-**Enforce data quality and lineage \
-**Built-in rules and column-level lineage ensure trust in your data.
+**Enforce data quality and lineage** Built-in rules and column-level lineage ensure trust in your data.
 
-**Leverage AI to build faster \
-**Our AI Copilot helps generate pipeline code from natural language prompts, accelerating onboarding and development.
+**Leverage AI to build faster** Our AI Copilot helps generate pipeline code from natural language prompts, accelerating onboarding and development.
 
 
 ---
