--- a/blog/2025-08-26-starlake-snowflake-native-app.mdx
+++ b/blog/2025-08-26-starlake-snowflake-native-app.mdx
@@ -1,6 +1,6 @@
 ---
-title: Starlake Data Pipelines as a Snowflake Native App
-slug: starlake-data-pipelines-snowflake
+title: Starlake as a Snowflake Native App
+slug: starlake-snowflake-native-app
 authors:
   - hayssams
 tags:
