--- a/blog/2025-08-26-starlake-snowflake-native-app.mdx
+++ b/blog/2025-08-26-starlake-snowflake-native-app.mdx
@@ -35,7 +35,11 @@ By building directly on **Snowflake's Native Application Framework**, Starlake o
 * Eliminates data movement, improving **both performance and security**
 * Keeps you compliant with Snowflake's governance and billing model
 
-In short: **No data movement. No orchestration glue code. Just powerful, declarative pipelines that run where your data lives while leveraging Snowflake's capabilities.**
+In short: 
+
+* **No data movement.**
+* **No orchestration glue code.**
+* **Just powerful, declarative pipelines that run where your data lives while leveraging Snowflake's capabilities.**
 
 
 ---
