--- a/blog/2025-08-26-starlake-snowflake-native-app.mdx
+++ b/blog/2025-08-26-starlake-snowflake-native-app.mdx
@@ -11,6 +11,8 @@ tags:
   - analytics-engineering
 ---
 
+![](/img/starlake-love-snowflake.png)
+
 ## **Starlake Snowflake Native App**
 
 We're excited to announce that **Starlake** will soon be available as a **Snowflake Native App**, bringing our declarative, AI-powered data pipeline automation **natively inside your Snowflake environment**.
