--- a/docs/0200-setup/200-starlake-core.mdx
+++ b/docs/0200-setup/200-starlake-core.mdx
@@ -238,6 +238,21 @@ Starlake Version 1.3.4
 
 ## Next Steps
 
+You may start the GUI with:
+
+```bash
+starlake serve
+```
+
+and point your browser to `http://localhost:9000`.
+
+To start on a different port set the `SL_API_HTTP_PORT` environment variable:
+
+```bash
+SL_API_HTTP_PORT=11000 starlake serve
+
+or continue with the CLI by following the tutorials below:
+
 - [Create your first project](/guides/project-setup/starlake-project-setup)
 - [Load your first dataset](/guides/load/tutorial)
 - [Transform your data](/guides/transform/tutorial)
