Keep the link to the snowflake native app guides

--- a/blog/2025-08-26-starlake-snowflake-native-app.mdx
+++ b/blog/2025-08-26-starlake-snowflake-native-app.mdx
@@ -82,6 +82,7 @@ And unlike other solutions, Starlake offers fair, predictable pricing not based 
 
 Whether you're building production-grade ELT pipelines, enabling self-service analytics, or scaling governed data platforms, **Starlake's Snowflake Native App is built to help you do it better, faster, and fully within Snowflake**.
 
-
+Want to explore right now?
+You can already try Starlake today by following our guides and tutorials — everything from loading and transforming data to orchestrating pipelines declaratively is available there.
 
 Want early access or a live demo? [Get in touch →](https://starlake.ai/)
