Update hero image

--- a/blog/2025-09-18-beyond-basic-etl.mdx
+++ b/blog/2025-09-18-beyond-basic-etl.mdx
@@ -3,12 +3,12 @@ slug: beyond-basic-etl
 title: "Beyond Basic ETL: Enterprise Data Capabilities Without the Complexity"
 authors:
   - sspaeti
-image: /img/blog/beyond-basic-etl/hero.jpeg
+image: /img/blog/beyond-basic-etl/hero.png
 description: ""
 tags: [Declarative Data Stack, Data Engineering, Starlake, YAML Configuration, Data Orchestration, Data Governance]
 ---
 
-![hero](/img/blog/beyond-basic-etl/hero.jpeg "Beyond Basic ETL: Enterprise Data Capabilities Without the Complexity")
+![hero](/img/blog/beyond-basic-etl/hero.png "Beyond Basic ETL: Enterprise Data Capabilities Without the Complexity")
 
 Most data teams spend 80% of their time wrestling with infrastructure—writing custom UPSERT logic, building incremental loading from scratch, or debugging why their Airflow DAGs failed again at 2 AM. Meanwhile, the business is still waiting for those critical data insights.
 
