switch from app to demo url

--- a/blog/2025-09-18-beyond-basic-etl.mdx
+++ b/blog/2025-09-18-beyond-basic-etl.mdx
@@ -204,4 +204,4 @@ I hope you enjoyed this. Please let me know in the comments or write me if you h
 
 ---
 
-Want to get started with Starlake? Check out the [GitHub repo](https://github.com/starlake-ai/starlake/) or get started with a demo on [app.starlake.ai](https://app.starlake.ai/). Again, Starlake is fully open-source—not only its engine but also SQL transpilers and used tools—but you can also use its cloud hosting to get started immediately. If you use VS Code, check out [the extension](https://www.youtube.com/watch?v=8EL9-UiW6zs) for this too.
+Want to get started with Starlake? Check out the [GitHub repo](https://github.com/starlake-ai/starlake/) or get started with a demo on [demo.starlake.ai](https://demo.starlake.ai/). Again, Starlake is fully open-source—not only its engine but also SQL transpilers and used tools—but you can also use its cloud hosting to get started immediately. If you use VS Code, check out [the extension](https://www.youtube.com/watch?v=8EL9-UiW6zs) for this too.
