Add dagster image

--- a/docs/0300-guides/500-orchestrate/100-tutorial.mdx
+++ b/docs/0300-guides/500-orchestrate/100-tutorial.mdx
@@ -58,7 +58,7 @@ This will deploy the DAGs to your orchestrator.
 
 <TabItem value="dagster" label="Dagster">
 
-    TODO
+![](/img/orchestration/dagster/dagster-dags.jpeg)
 
 </TabItem>
 <TabItem value="snowflake" label="Snowflake Tasks">
