--- a/blog/2025-10-21-starlake-snowflake-native-app.mdx
+++ b/blog/2025-10-21-starlake-snowflake-native-app.mdx
@@ -14,6 +14,8 @@ tags:
 ---
 
 
+![Security & Performance](/img/blog/snowflake-native-app/snowflake-native-app.png "Snowflake Native App Framework")
+
 # Why Starlake Chose to Go Native with Snowflake
 
 As a modern ETL/ELT framework, Starlake's core mission to manage complex data pipelines securely and efficiently. To fully deliver on this promise and eliminate the operational burdens of external data processing, Starlake made the strategic decision to embrace the **Snowflake Native App Framework**.
